language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/borrow_global_bad5.exp
error: 

   ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_bad5.move:9:22 ───
   │
 9 │         let t2_ref = borrow_global_mut<T>(sender);
   │                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'T'
   ·
 8 │         let t1_ref = if (b) borrow_global_mut<T>(sender) else &mut t;
   │                             ---------------------------- It is still being mutably borrowed by this reference
   │

